# readmark

./: .credo.exs  .dockerignore  .gitignore  .gitlab-ci.yml  .iex.exs  .prettierignore  .sobelow-conf  .tool-versions  Dockerfile  Makefile  README.md  build.Dockerfile  coveralls.json  dprint.json  fly.toml  mix.exs  readmark.sublime-project
.github/workflows/: build-push.yml  ci.yml  deploy.yml  test.yml
assets/: tailwind.config.js
assets/css/: app.css
assets/js/: app.js  events.js
assets/js/hooks/: flash.js  index.js  (+4 more)
config/: config.exs  dev.exs  prod.exs  runtime.exs  test.exs
go_src/readability/: go.mod  go.sum  main.go
lib/: readmark.ex  readmark_web.ex
lib/epub/: epub.ex
lib/readability/: readability.ex  readability_behaviour.ex
lib/readmark/: accounts.ex  application.ex  article_fetcher.ex  bookmarks.ex  cldr.ex  dump.ex  epub.ex  features.ex  mailer.ex  notes.ex  readability.ex  release.ex  repo.ex  schema.ex
lib/readmark_web/: endpoint.ex  gettext.ex  router.ex  telemetry.ex  user_auth.ex
native/epub/: Cargo.toml  Makefile
native/epub/.cargo/: config.toml
native/epub/src/: builder.rs  lib.rs
native/epub/src/builder/: image.rs  mime_guess.rs  utils.rs
native/epub/src/mime_guess/: mime_types.rs  mod.rs
notes/2022/: 07-25-example.md
priv/gettext/: default.pot
priv/repo/: seeds.exs
priv/static/: manifest.json  site.webmanifest
test/: test_helper.exs
test/readmark/: accounts_test.exs  epub_test.exs
test/readmark_web/: user_auth_test.exs
test/support/: conn_case.ex  data_case.ex  mocks.ex  test_helpers.ex  time_helper.ex
(+123 files in other folders)
