[package]
name = "epub"
version = "0.1.0"
authors = []
edition = "2021"

[lib]
name = "epub"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
epub-builder = "0.7"
image = { version = "0.24.6", default-features = false, features = ["gif", "jpeg", "png", "webp"] }
lol_html = "0.3.2"
mime = "0.3.17"
mime_guess = "2.0.4"
minreq = { version = "2.7.0", features = ["https"] }
rayon = "1.7.0"
rustler = "0.27.0"
url = "2.3.1"
