[package]
name = "epub"
version = "0.1.0"
authors = []
edition = "2021"

[lib]
name = "epub"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
env_logger = "0.10"
epub-builder = "0.7"
image = { version = "0.24.6", default-features = false, features = ["gif", "jpeg", "png", "webp"] }
log = "0.4"
lol_html = "0.3.2"
once_cell = "1.18.0"
rayon = "1.7.0"
rustler = "0.27.0"
ureq = "2.7.1"
url = "2.3.1"
